--- a/android/app/src/main/res/values/strings.xml
+++ b/android/app/src/main/res/values/strings.xml
@@ -1,4 +1,5 @@
 <resources>
     <string name="app_name">Smart Home</string>
     <string name="dashboard">Dashboard</string>
+    <string name="notification_channel_id">"alerts"</string>
 </resources>
